src/test/ui/rfcs/rfc-2091-track-caller/error-odd-syntax.rs
#[track_caller(1)]
fn f() {}
//~^^ ERROR malformed `track_caller` attribute input

fn main() {}
